--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "version": "1.0.0",
   "main": "./build/app.js",
   "scripts": {
+    "start": "node ./build/app.js",
     "build": "tsc ./src/app.ts --outDir build/",
-    "test": "nodemon ./build/app.js"
+    "test": "tsc ./src/app.ts --outDir build/ && nodemon ./build/app.js"
   },
   "bin": "./build/app.js",
   "dependencies": {
