--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "outDir": "./build/",
-    "module": "es2020",
+    "module": "esnext",
     "target": "es5",
-    "baseUrl": "./src/",
+    "baseUrl": ".",
+    "rootDir": "./src/",
+    "sourceMap": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
@@ -11,11 +13,10 @@
       "./node_modules/@types"
     ],
   },
-  "files": [
-    "./src/app.ts"
-  ],
   "include": [
-    "./src/**/*", "build/app.js", 
+    "build/app.js", 
+    "src/**/*",
+    "src/*"
   ],
   "exclude": [
     "node_modules",
