--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "rootDir": "./src/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "esModuleInterop": true,
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "typeRoots": [
       "./node_modules/@types"
     ],
