Add: Bash functionality

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bartender",
-  "description": "A system designed for our school",
+  "description": "A chat-interaction system designed for our school",
   "author": "David Penkowoj",
   "license": "BSD-2-Clause",
   "version": "1.0.0",
