--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ffmpeg-static": "^4.4.0",
     "sodium": "^3.0.2",
     "utf-8-validate": "^5.0.5",
-    "ytdl-core": "^4.9.1"
+    "ytdl-core": "^4.9.1",
+    "ytsr": "^3.5.3"
   },
   "devDependencies": {
     "@types/node": "^16.4.13",
